// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapOrchestrationChunkToLangChainMessageChunk should map a chunk with content to AIMessageChunk: AIMessageChunk with content 1`] = `
{
  "id": [
    "langchain_core",
    "messages",
    "AIMessageChunk",
  ],
  "kwargs": {
    "additional_kwargs": {
      "module_results": {
        "llm": {
          "choices": [
            {
              "delta": {
                "content": "Test content",
                "role": "assistant",
                "tool_calls": undefined,
              },
              "finish_reason": "",
              "index": 0,
            },
          ],
          "created": 1634840000,
          "id": "test-id",
          "model": "test-model",
          "object": "chat.completion.chunk",
          "system_fingerprint": "fp_123",
          "usage": undefined,
        },
      },
      "request_id": "req-123",
    },
    "content": "Test content",
    "invalid_tool_calls": [],
    "response_metadata": {},
    "tool_call_chunks": [],
    "tool_calls": [],
    "usage_metadata": undefined,
  },
  "lc": 1,
  "type": "constructor",
}
`;

exports[`mapOrchestrationChunkToLangChainMessageChunk should map a chunk with tool call chunks to AIMessageChunk: AIMessageChunk with tool call chunks 1`] = `
{
  "id": [
    "langchain_core",
    "messages",
    "AIMessageChunk",
  ],
  "kwargs": {
    "additional_kwargs": {
      "module_results": {
        "llm": {
          "choices": [
            {
              "delta": {
                "content": "",
                "role": "assistant",
                "tool_calls": [
                  {
                    "function": {
                      "arguments": "",
                      "name": "test_function",
                    },
                    "id": "call-123",
                    "index": 0,
                    "type": "function",
                  },
                ],
              },
              "finish_reason": "",
              "index": 0,
            },
          ],
          "created": 1634840000,
          "id": "test-id",
          "model": "test-model",
          "object": "chat.completion.chunk",
          "system_fingerprint": "fp_123",
          "usage": undefined,
        },
      },
      "request_id": "req-123",
    },
    "content": "",
    "invalid_tool_calls": [],
    "response_metadata": {},
    "tool_call_chunks": [
      {
        "args": "",
        "id": "call-123",
        "index": 0,
        "name": "test_function",
        "type": "tool_call_chunk",
      },
    ],
    "tool_calls": [
      {
        "args": {},
        "id": "call-123",
        "name": "test_function",
        "type": "tool_call",
      },
    ],
    "usage_metadata": undefined,
  },
  "lc": 1,
  "type": "constructor",
}
`;
